--- a/cover/_BOOKINFO.tex
+++ b/cover/_BOOKINFO.tex
@@ -1,7 +1,7 @@
 \newcommand{\bookauthor}{Matthew-Mina Hanna}
 \newcommand{\shortbookauthor}{Hanna}
 \newcommand{\booktitle}{Math Compendium}
-\newcommand{\booksubtitle}{ }
+\newcommand{\booksubtitle}{This resource and its source code are free to use.}
 
 
 
