--- a/content/algebra/group-theory/group-theory-master.tex
+++ b/content/algebra/group-theory/group-theory-master.tex
@@ -4,3 +4,6 @@
 \chapter{Group Actions}
 \epigraph{Groups, as men, will be known by their actions.}{\textit{Guillermo Moreno}}
 \input{content/algebra/group-theory/4-group-actions/group-theory-4-group-actions}
+
+\chapter{Direct and Semidirect Products}
+\input{content/algebra/group-theory/5-direct-and-semidirect-products/direct-and-semidirect-products}
