--- a/content/algebra/second-year-linear-algebra/second-year-linear-algebra-master.tex
+++ b/content/algebra/second-year-linear-algebra/second-year-linear-algebra-master.tex
@@ -4,6 +4,9 @@
 \chapter{Span, Basis and Dimension}
 \input{content/algebra/second-year-linear-algebra/span-basis-and-dimension/span-basis-and-dimension}
 
+\chapter{Eigenvalues and Eigenvectors}
+\input{content/algebra/second-year-linear-algebra/eigenvalues-and-eigenvectors/eigenvalues-and-eigenvectors}
+
 \chapter{Inner Product Spaces}
 \input{content/algebra/second-year-linear-algebra/inner-product-spaces/inner-product-spaces}
 
