--- a/content/algebra/first-year-linear-algebra/2-solving-linear-equations/first-year-linear-algebra-2-solving-linear-equations.tex
+++ b/content/algebra/first-year-linear-algebra/2-solving-linear-equations/first-year-linear-algebra-2-solving-linear-equations.tex
@@ -1,10 +1,10 @@
-
-
 \section{Vectors and Linear Equations}
 \input{content/algebra/first-year-linear-algebra/2-solving-linear-equations/vectors-and-linear-equations}
 
-
-
 \section{Elimination}
 \input{content/algebra/first-year-linear-algebra/2-solving-linear-equations/elimination}
+
+\section{LU Factorization}
+\input{content/algebra/first-year-linear-algebra/2-solving-linear-equations/lu-factorization}
+
 
