--- a/content/algebra/group-theory/4-group-actions/group-theory-4-group-actions.tex
+++ b/content/algebra/group-theory/4-group-actions/group-theory-4-group-actions.tex
@@ -1,3 +1,5 @@
-
 \section{Definitions, Basic Results, and Examples}
 \input{content/algebra/group-theory/4-group-actions/definitions}
+
+\section{Automorphisms}
+\input{content/algebra/group-theory/4-group-actions/automorphisms}
