--- a/content/analysis/functional-analysis/functional-analysis-master.tex
+++ b/content/analysis/functional-analysis/functional-analysis-master.tex
@@ -1,2 +1,8 @@
 \chapter{Examples of New Spaces}
 \input{content/analysis/functional-analysis/new-spaces/new-spaces}
+
+\chapter{Hilbert Spaces}
+\input{content/analysis/functional-analysis/hilbert-spaces/hilbert-spaces}
+
+\chapter{Linear Maps}
+\input{content/analysis/functional-analysis/linear-maps/linear maps}
