--- a/content/analysis/ordinary-differential-equations/ordinary-differential-equations-master.tex
+++ b/content/analysis/ordinary-differential-equations/ordinary-differential-equations-master.tex
@@ -2,3 +2,6 @@
 
 \chapter{First Order Differential Equations}
 \input{content/analysis/ordinary-differential-equations/first-order-differential-equations/ordinary-differential-equations-2-first-order-differential-equations}
+
+\chapter{Second Order Linear Equations}
+\input{content/analysis/ordinary-differential-equations/second-order-differential-equations/ordinary-differential-equations-second-order-differential-equations}
