--- a/Main.tex
+++ b/Main.tex
@@ -36,9 +36,13 @@ This project benefited from open-source tools and examples created by:\\\\
 
 \mainmatter
 
+\part{Precalculus}
+\label{part: Precalculus}
+\parttoc
+
 \part{First Year Calculus}
 \label{part: First Year Calculus}
-The primary resource for this part is \cite{ref:stewart}. \vspace*{-1em}
+\vspace*{2em} The primary resource for this part is \cite{ref:stewart}. \vspace*{1em}
 \parttoc
 \input{content/analysis/first-year-calculus/first-year-calculus-master}
 
@@ -63,6 +67,7 @@ The primary resource for this part is \cite{ref:stewart}. \vspace*{-1em}
 
 \part{A Second Course in Linear Algebra}
 \label{Proof Based Linear Algebra}
+The primary resource for this part is \cite{ref:axler}. \vspace*{-1em}
 \parttoc
 \input{content/algebra/second-year-linear-algebra/second-year-linear-algebra-master}
 
@@ -72,7 +77,7 @@ The primary resource for this part is \cite{ref:stewart}. \vspace*{-1em}
 \input{content/analysis/real-analysis/real-analysis-master}
 
 
-\part{Complex Analysis}
+\part{\enskip Complex Analysis}
 \label{Complex Analysis}
 \parttoc
 \input{content/analysis/complex-analysis/complex-analysis-master}
@@ -120,10 +125,10 @@ The primary resource for this part is \cite{ref:stewart}. \vspace*{-1em}
 
 
 
-%\part{ \enskip Gauge Theory}
-%\label{part: Gauge Theory}
-%\parttoc
-%\input{content/geometry-and-topology/gauge-theory/gauge-theory-master}
+\part{ \enskip Gauge Theory}
+\label{part: Gauge Theory}
+\parttoc
+\input{content/geometry-and-topology/gauge-theory/gauge-theory-master}
 
 
 \appendix
