--- a/content/algebra/ring-theory/introduction/ring-theory-1-introduction-to-rings.tex
+++ b/content/algebra/ring-theory/introduction/ring-theory-1-introduction-to-rings.tex
@@ -1,4 +1,3 @@
-
 \begin{dfn}
 A \vocab{ring} \(R\) is a non-empty set equipped with two binary operations \(+\) and \(\times\), called addition and multiplication, respectively, such that:
 \begin{enumerate}[label=\textbf{\roman*)}]
@@ -15,3 +14,26 @@ r \times s, \quad r \cdot s, \quad \text{or simply } rs,
 \]
 with juxtaposition \(rs\) usually being the default.
 \end{dfn}
+
+\begin{theorem}
+    Every finite integral domain is a field. 
+\end{theorem}
+\begin{proof}
+    We need only show that every non-zero element of \( R \) has a multiplicative inverse. \\
+    Suppose that \( R \) is a finite integral domain. Pick \( a \in R \) non-zero and define 
+    \[ \varphi_{a}(x) := ax .\]
+    Suppose that \( \varphi_{a}(x) = \varphi_{a}(y) \). Then 
+    \begin{align*}
+        \varphi_{a}(x) &= \varphi_{a}(y)\\
+        ax &=ay  \\
+        ax- ay &= 0\\
+        a \left( x-y \right) &=0
+    \end{align*}
+    Since \( R \) is an integral domain, either \( a \) or \( x-y \) must be \( 0 \). Since \( a \) was chosen to be non-zero, \( x-y \) must be \( 0 \) or \( x=y \). Since \(    \varphi_{a}(x) = \varphi_{a}(y) \Rightarrow x =y\), \( \varphi_{a} \) is injective. Since \( R \) is finite, \( \varphi_{a} \) is also surjective and hence has a unique two sided inverse, call it \( \varphi_{b} \). Therefore 
+    \[ \varphi_{b} \left( \varphi_{a} (1) \right) = \varphi_{a} \left( \varphi_{b} (1) \right) = 1 \Rightarrow ba =ab =1 \]
+    So \( a  \) has a multiplicative inverse and we are done. 
+\end{proof}
+
+
+\section{Ideals}
+\input{content/algebra/ring-theory/introduction/ideals}
