Some algebra updates

--- a/content/algebra/ring-theory/introduction/ideals.tex
+++ b/content/algebra/ring-theory/introduction/ideals.tex
@@ -3,7 +3,7 @@ Much like in group theory, we want to develop some quotient structure on rings. 
 Given a subset \( I \) of a ring \( R \). What conditions do we need for the quotient \( \faktor{R}{I} \) to be a ring? Let \( r+I \) and \( s+I \) be left additive cosets. We want 
 \[ \left( r+I \right) \left( s+I \right) = rs +I .\]
 Let us "expand" the left side. 
-\[ \left( r+I \right) \left( s+I \right) = rs + rI + sI + I \cdot I \]
+\[ \left( r+I \right) \left( s+I \right) = rs + rI + Is + I \cdot I \]
 If we impose the conditions, that 
 \begin{enumerate}[label=\textbf{\roman*)}]
     \item \( I \) is a subring of \( R \), 
