--- a/Main.tex
+++ b/Main.tex
@@ -126,10 +126,14 @@ The primary resource for this part is \cite{ref:axler}. \vspace*{-1em}
 
 
 \part{ \enskip Gauge Theory}
-\label{part: Gauge Theory}
+\label{part:Gauge-Theory}
 \parttoc
 \input{content/geometry-and-topology/gauge-theory/gauge-theory-master}
 
+\part{\enskip First Course in Number Theory}
+\label{part:Basic-Number-Theory}
+\parttoc
+\input{content/algebra/basic-number-theory/basic-number-theory}
 
 \appendix
 \part{\enskip Appendix}
