--- a/content/algebra/second-year-linear-algebra/inner-product-spaces/inner-product-spaces.tex
+++ b/content/algebra/second-year-linear-algebra/inner-product-spaces/inner-product-spaces.tex
@@ -1,2 +1,5 @@
 \section{Inner Products and Norms}
 \input{content/algebra/second-year-linear-algebra/inner-product-spaces/inner-products-and-norms}  
+
+\section{Orthonormal Bases}
+\input{content/algebra/second-year-linear-algebra/inner-product-spaces/orthonormal-bases}  
