--- a/content/algebra/second-year-linear-algebra/vector-spaces/defintion-and-examples.tex
+++ b/content/algebra/second-year-linear-algebra/vector-spaces/defintion-and-examples.tex
@@ -13,9 +13,9 @@
     &(\lambda, \vb{v}) \mapsto \lambda \vb{v},
   \end{align*}
   \item[\textbf{Commutativity:}] \( \vb{u} + \vb{v} = \vb{v} + \vb{u} \) for all \( \vb{u}, \vb{v} \in \mathbf{V} \). 
-  \item[\textbf{Associativity:}] \( \left( \vb{u} + \vb{v} \right) + \vb{w} = \vb{u} + \left( \vb{v} + \vb{w} \right) \) and \( \alpha \left( \beta    \right) \vb{v} = \left( \alpha \beta \right) \vb{v} \) for all \( \vb{u}, \vb{v},\vb{w} \in \mathbf{V} \) and \( \alpha, \beta \in \mathbb{K} \).
+  \item[\textbf{Associativity:}] \( \left( \vb{u} + \vb{v} \right) + \vb{w} = \vb{u} + \left( \vb{v} + \vb{w} \right) \) and \( \alpha \left( \beta \vb{v}   \right)  = \left( \alpha \beta \right) \vb{v} \) for all \( \vb{u}, \vb{v},\vb{w} \in \mathbf{V} \) and \( \alpha, \beta \in \mathbb{K} \).
   \item[\textbf{Distributive Properties:}] \( \alpha \left( \vb{u} + \vb{v} \right) = \alpha \vb{u} + \alpha \vb{v} \) and \( \left( \alpha + \beta \right)\vb{v} = \alpha \vb{v} + \beta \vb{v} \) for all \( \vb{u}, \vb{v} \in \mathbf{V} \) and \( \alpha, \beta \in \mathbb{K} \).
-  \item[\textbf{Existence of an Additive Identity:}] There exists an element  \( \vb{0} \in \mathbf{V} \)called the \vocab{additive identity} such that for all \( \vb{v} \in \mathbf{V} \), we have \( \vb{v} + \vb{0} = \vb{v} \).
+  \item[\textbf{Existence of an Additive Identity:}] There exists an element  \( \vb{0} \in \mathbf{V} \) called the \vocab{additive identity} such that for all \( \vb{v} \in \mathbf{V} \), we have \( \vb{v} + \vb{0} = \vb{v} \).
   \item[\textbf{Existence of an Additive Inverse:}] For every \( \vb{v} \in \mathbf{V} \), there exists a \( \vb{w} \in \mathbf{V} \) called the \vocab{additive inverse} such that \( \vb{v} + \vb{w} = \vb{0} \).
   \item[\textbf{Multiplicative Identity:}] For \( 1 \in \mathbb{K} \), we have that \( 1 \vb{v} = \vb{v} \) for all \( \vb{v} \in \mathbf{V} \).
 \end{description}
