--- a/content/appendix/naive-set-theory/functions.tex
+++ b/content/appendix/naive-set-theory/functions.tex
@@ -14,7 +14,7 @@
     A \vocab{relation} on a non-empty set \( X \) is any subset \( R \) of the Cartesian product \( X \times X \). If the ordered pair \( (x,y) \in R \), we will often express this as \( xRy \).
 \end{dfn}
 
-\begin{dfn}
+\begin{dfn}\label{def:order-on-a-set}
     Let \( S \) be a set. An \vocab{order} on \( S \) is a relation \( < \) with following two properties.
     \begin{enumerate}[label=\textbf{\roman*)}]
         \item For every \( x,y \in S \) exactly one of the following hold:
