--- a/content/geometry-and-topology/point-set-topology/topological-spaces-and-continuous-functions/point-set-topology-1-topological-spaces-and-continuous-functions.tex
+++ b/content/geometry-and-topology/point-set-topology/topological-spaces-and-continuous-functions/point-set-topology-1-topological-spaces-and-continuous-functions.tex
@@ -1,3 +1,9 @@
-
-\section{Definition and Examples}
+\section{Definition, Open Sets}
 \input{content/geometry-and-topology/point-set-topology/topological-spaces-and-continuous-functions/definition-and-examples}
+
+\section{Closed Sets}
+\input{content/geometry-and-topology/point-set-topology/topological-spaces-and-continuous-functions/closed-sets}
+
+\section{Basis for a Topology}
+\input{content/geometry-and-topology/point-set-topology/topological-spaces-and-continuous-functions/basis}
+
