--- a/content/algebra/first-year-linear-algebra/13-einstein-summation/repeated-indices.tex
+++ b/content/algebra/first-year-linear-algebra/13-einstein-summation/repeated-indices.tex
@@ -146,3 +146,13 @@ The \vocab{Kronecker delta} is the tensor defined by
 \end{cases}
 \]
 \end{dfn}
+
+\begin{example}
+    If \( n =3 \), then \( \delta_{ij}x_{i} x_{j} \) is 
+    \begin{align*}
+        \delta_{ij}x_{i} x_{j} &= 1 x_{1} x_{1} + 0 x_{1} x_{2} + 0 x_{1} x_{3} + 0 x_{2} x_{1} + 1 x_{2} x_{2} + 0 x_{2} x_{3} + 0 x_{3}x_{1} + 0 x_{3} x_{2} + 1 x_{3} x_{3} \\
+        &= x_{1} x_{1}+ x_{2}  x_{2} + x_{3} x_{3} \\
+        &= x_{i} x_{i}
+    \end{align*}
+    
+\end{example}
