--- a/content/analysis/real-analysis/measure-theory/real-analysis-measure-theory.tex
+++ b/content/analysis/real-analysis/measure-theory/real-analysis-measure-theory.tex
@@ -1,3 +1,7 @@
-\section{Outer Measure}
+\section{Measures}
+\subsection{Outer Measures on \( \mathbb{R} \)}
 \input{content/analysis/real-analysis/measure-theory/outer-measure}
+
+\subsection{Measurable Spaces and Functions}
+\input{content/analysis/real-analysis/measure-theory/measurable-spaces-functions}
 
