--- a/content/appendix/inequalities/some-basic-algebraic-inequalites.tex
+++ b/content/appendix/inequalities/some-basic-algebraic-inequalites.tex
@@ -1,8 +1,22 @@
-\begin{exercise}
+\begin{exercise}\label{ex:ez-first-ineq}
     Show that \( a^{2} +b ^{2} \geq 2ab \) for all \( a,b \in \mathbb{R} \).
 \end{exercise}
 \begin{solution}
     Since \( \left( a-b \right)^{2} \geq 0 \), we have 
     \[ a^{2}-2ab+b^{2} \geq 0 \] or 
     \[  a^{2} +b ^{2} \geq 2ab .\]
+\end{solution}
+
+\begin{exercise}
+    Show that 
+    \[ \frac{a+b}{2} \ge \sqrt{ab} \] for \( a,b \ge 0 \). 
+\end{exercise}
+\begin{solution}
+    Apply \cref{ex:ez-first-ineq} to \( \sqrt{a} \) and \( \sqrt{b} \). \\ 
+    \begin{align*}
+        \left( \sqrt{a} \right)^{2} + \left( \sqrt{b} \right)^{2} &\ge 2 \sqrt{a} \sqrt{b} \\
+        a +b &\ge 2 \sqrt{a} \sqrt{b} \tag*{Since $ a,b \ge 0$.}\\
+        \frac{a+b}{2} &\ge \sqrt{ab}
+    \end{align*}
+    
 \end{solution}
