--- a/preamble.tex
+++ b/preamble.tex
@@ -33,10 +33,10 @@
 \usepackage{hyperref}
 \usepackage{nameref,cleveref}
 \usepackage[a4paper, 
-left=0.08in,
-right=0.16in,
-top=0.60in,
-bottom=0.60in
+left=0.05in,
+right=0.1in,
+top=0.70in,
+bottom=0.70in
 ]{geometry}
 \usepackage[mathscr]{eucal}
 \PassOptionsToPackage{usenames,svgnames,dvipsnames,table,xcdraw}{xcolor}
@@ -250,15 +250,17 @@ qed = $\newmoon$
 % A package for drawing commutative diagrams exported from https://q.uiver.app.
 %
 % This package is currently a wrapper around the `tikz-cd` package, importing necessary TikZ
-% libraries, and defining a new TikZ style for curves of a fixed height.
+% libraries, and defining new TikZ styles for curves of a fixed height and for shortening paths
+% proportionally.
 %
-% Version: 1.5.4
+% Version: 1.6.0
 % Authors:
 % - varkor (https://github.com/varkor)
-% - AndrÃ©C (https://tex.stackexchange.com/users/138900/andr%C3%A9c)
+% - AndréC (https://tex.stackexchange.com/users/138900/andr%C3%A9c)
+% - Andrew Stacey (https://tex.stackexchange.com/users/86/andrew-stacey)
 
 \NeedsTeXFormat{LaTeX2e}
-\ProvidesPackage{quiver}[2021/01/11 quiver]
+\ProvidesPackage{quiver}[2025/09/20 quiver]
 
 % `tikz-cd` is necessary to draw commutative diagrams.
 \RequirePackage{tikz-cd}
@@ -268,8 +270,10 @@ qed = $\newmoon$
 \usetikzlibrary{calc}
 % `pathmorphing` is necessary to draw squiggly arrows.
 \usetikzlibrary{decorations.pathmorphing}
+% `spath3` is necessary to draw shortened edges.
+\usetikzlibrary{spath3}
 
-% A TikZ style for curved arrows of a fixed height, due to AndrÃ©C.
+% A TikZ style for curved arrows of a fixed height, due to AndréC.
 \tikzset{curve/.style={settings={#1},to path={(\tikztostart)
     .. controls ($(\tikztostart)!\pv{pos}!(\tikztotarget)!\pv{height}!270:(\tikztotarget)$)
     and ($(\tikztostart)!1-\pv{pos}!(\tikztotarget)!\pv{height}!270:(\tikztotarget)$)
@@ -277,6 +281,11 @@ qed = $\newmoon$
     settings/.code={\tikzset{quiver/.cd,#1}
         \def\pv##1{\pgfkeysvalueof{/tikz/quiver/##1}}},
     quiver/.cd,pos/.initial=0.35,height/.initial=0}
+
+% A TikZ style for shortening paths without the poor behaviour of `shorten <' and `shorten >'.
+\tikzset{between/.style n args={2}{/tikz/execute at end to={
+    \tikzset{spath/split at keep middle={current}{#1}{#2}}
+}}}
 
 % TikZ arrowhead/tail styles.
 \tikzset{tail reversed/.code={\pgfsetarrowsstart{tikzcd to}}}
@@ -286,6 +295,8 @@ qed = $\newmoon$
 \tikzset{no body/.style={/tikz/dash pattern=on 0 off 1mm}}
 
 \endinput
+
+%end quiver
 
 
 \usepackage{tocbasic}
